--- a/PORTFOLIO/style.css
+++ b/PORTFOLIO/style.css
@@ -59,10 +59,8 @@ li {
 .container {
   display: flex;
   flex-direction: row;
-  width: 100%;
   margin-top: 3em;
   align-items: center;
-  justify-content: center;
 }
 .column {
   float: right;
@@ -75,14 +73,28 @@ li {
 }
 .left-side {
   width: 35%;
+  padding: 10px 5px 10px 25px;
 }
 .right-side {
   width: 65%;
-  padding-right: 25px;
+  padding: 10px 25px 10px 5px;
+}
+.skills-quals {
+  align-self: flex-start;
+  padding: 2em;
+  border: solid;
+  border-width: 1px;
+  border-radius: 25px;
+  border-color: #4f392e;
+  height: auto;
+  margin-left: 40px;
+  margin-right: 30px;
+  column-gap: 20px;
+  grid-template-columns: 8ch auto;
 }
 .my-projects {
-  padding-left: 70px;
-  padding-right: 70px;
+  padding-left: 60px;
+  padding-right: 60px;
   margin: 0 auto;
   text-decoration: none;
   color: #4f392e;
@@ -109,19 +121,6 @@ li {
   font-weight: 700;
   margin: 0 auto;
 }
-.secondcolumn {
-  align-self: flex-start;
-  padding: 2em;
-  border: solid;
-  border-width: 1px;
-  border-radius: 25px;
-  border-color: #4f392e;
-  height: auto;
-  margin-left: 40px;
-  margin-right: 30px;
-  column-gap: 20px;
-  grid-template-columns: 8ch auto;
-}
 .headingtype {
   text-align: left;
   margin: 0 auto;
@@ -130,22 +129,4 @@ li {
 }
 .aboutme {
   text-align: left;
-}
-.containertwo {
-  display: flex;
-  align-items: center;
-}
-.canva-project {
-  padding: 25px;
-  display: flex;
-  float: center;
-}
-.image {
-  padding-left: 80px;
-  width: 35%;
-}
-.text {
-  padding-right: 200px;
-  text-align: left;
-  width: 65%;
 }
